added readme and common application properties link

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+# common application properties
+# https://docs.spring.io/spring-boot/appendix/application-properties/index.html
+
 spring.application.name=ecommerce
