saving application work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,13 @@
 # https://docs.spring.io/spring-boot/appendix/application-properties/index.html
 
 spring.application.name=ecommerce
+
+#database properties
+#h2 console enabled /h2-console
+spring.h2.console.enabled=true
+#setting jdbc url
+spring.datasource.url=jdbc:h2:mem:test
+
+#show queries at runtime
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
