--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.datasource.url=jdbc:h2:mem:test
 #show queries at runtime
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#username and password
+spring.security.user.name=lokesh
+spring.security.user.password=lokesh
