Added entity relationship examples

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@
 
 spring.application.name=ecommerce
 
+#logging.level.root = debug
+
 #database properties
 #h2 console enabled /h2-console
 spring.h2.console.enabled=true
@@ -14,5 +16,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #username and password
+
 spring.security.user.name=lokesh
 spring.security.user.password=lokesh
