--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,26 @@ spring.application.name=ecommerce
 
 #database properties
 #h2 console enabled /h2-console
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 #setting jdbc url
-spring.datasource.url=jdbc:h2:mem:test
+#spring.datasource.url=jdbc:h2:mem:test
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+#spring.datasource.username=root
+#spring.datasource.password=12345678
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.username=postgres
+spring.datasource.password=12345678
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
 
 #show queries at runtime
 spring.jpa.show-sql=true
